added seating charts

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.1",
     "class-variance-authority": "^0.7.1",
